--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -57,9 +57,9 @@ plt<- plt + scale_x_datetime(labels = date_format("%H:%M"),breaks = "1 hour")
 plt
 
 # get maximum average for any interval
-maxAve<-max(dft_byInterval$aveSteps)
+maxAve<-max(dft_byIntervalAve$aveSteps)
 # get interval for the maximum average
-maxAveInterval<-as.integer(dft_byInterval[dft_byInterval$aveSteps==maxAve,1])
+maxAveInterval<-as.integer(dft_byIntervalAve[dft_byIntervalAve$aveSteps==maxAve,1])
 ```
 The Interval with the maximum average number of steps taken :  `r maxAveInterval`
 
